	  line (by David Golden) (ISHIGAKI)
	- Resolved #25972: makemaker_args INSTALLDIRS => 'perl'; doesn't
	  work (by TELS) (ISHIGAKI)
	- Resolved #45978: .pm.PL runs in wrong order for WriteMakefile
	  (by Hilary Holz) (ISHIGAKI)
	- Resolved #19783: Query CPAN for new versions of Module::Install
	  during "make dist" (by Steffen Mueller) (ISHIGAKI)
	- Now license is properly passed to the EU::MM in the
	  background (ISHIGAKI)
	- Added non-interactive session support, part of which was
	  there some time before (ISHIGAKI)

0.94 Tue 23 Feb 2010
	- Fixed critical author/xt bug (ADAMK)

0.93 Sun  7 Feb 2010
	- Better search for 'Perl' license (CHORNY)
	- Added automatic executing of xt tests during either author()
	  mode or when RELEASE_TESTING is enabled (ADAMK)

0.92 Thu 21 Jan 2010
	- Support github.com bugtracker (CHORNY)
	- Made the matching phrase for the perl license a bit shorter
	  to allow "the same terms as Perl 5.10" etc (ISHIGAKI)
	- Refactor part of license_from to separate sub, tests for a new
	  sub (CHORNY)
	- Refactor part of perl_version_from to separate sub, tests for
	  a new sub (CHORNY)
	- Allow spaces at the start of string when using
	  perl_version_from (CHORNY)
	- The all_from command now stores the filename in the 'all_from'
	  key for later reuse (MARCEL)
	- Support code.google.com bugtracker (CHORNY)
	- If the DSL code fails, say why (ADAMK)
	- Now autoinstall doesn't die on CPAN-1.81 (JJORE)
	- Check 'copyrights' section for license also (CHORNY)
	- Test passing correct params to EU::MM (CHORNY)
	- Use BUILD_REQUIRES EU::MM param for better OS packages (CHORNY)
	- Bundled prereqs will be removed from build prereqs only (CHORNY)
	- Use MIN_PERL_VERSION EU::MM param (CHORNY)
	- Better search for 'Perl' license (CHORNY)
	- Adding 'makemaker' command to make EU:MM version conditionals
	  easier (ADAMK)
	- Removed a variety of Perl::MinimumVersion complaints (ADAMK)

0.91 Thu 28 May 2009
	- Add missing dependency on Parse::CPAN::Meta
